--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "vercel-build": "echo hello"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Essach",
   "license": "MIT",
@@ -27,7 +27,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.22.9",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.2",
     "rimraf": "^5.0.1"
   }
 }
