--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "Temporary mini backend for my app",
-    "main": "server.js",
+    "main": "api/index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node ./api/index.js",
